--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -22,3 +22,37 @@ p{
     width: 20px;
     height: 20px;
 } */
+
+
+.post-area{
+    height: 5rem;
+    outline: none;
+    border: 0;
+    resize: none;
+}
+
+.post-area:focus{
+    outline: none;
+}
+
+.btn-post{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-weight: 600;
+    border-radius: 25rem;
+}
+
+.hidden{
+    display: none;
+}
+
+.button-remove{
+    position: absolute;
+    right: 0.25rem;
+    border: none;
+    border-radius: 50%;
+}
+
+.button-remove:hover{
+    opacity: 75%;
+}
