--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,6 +3,8 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
+    margin-right: 0.5rem;
+    border: 0.25rem solid aliceblue;
 }
 
 .avatar:hover{
